test/integration/unsolved_syntax_issues/no_program_name2.pal
{2,5,7}
program (input, output);
begin
	a := 1;
	2 = 1;			// error
end				// error
